# nexo-pycozmo

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
nexo-pycozmo/: __init__.py
nexo-pycozmo/audiokinetic/: soundbank.py
